--- a/.github/workflows/2-pull--build.yml
+++ b/.github/workflows/2-pull--build.yml
@@ -4,7 +4,7 @@ on:
   pull_request:
     branches: main # Run workflow on PRs to the main branch.
 
-  # Run workflow on pushes any branch.
+  # Run workflow on pushes to any branch.
   push:
 
   # Allows you to run this workflow manually from the Actions tab.
