--- a/.github/workflows/2-pull--deploy.yml
+++ b/.github/workflows/2-pull--deploy.yml
@@ -1,13 +1,13 @@
 name: pull--deploy
 
 on:
-  # Run workflow anytime the pull--build workflow completes for the main branch.
+  # 👇 Run workflow anytime the pull--build workflow completes for the main branch.
   workflow_run:
     workflows: pull--build
     types: completed
     branches: main
 
-  # Allows you to run this workflow manually from the Actions tab
+  # Allows you to run this workflow manually from the Actions tab.
   workflow_dispatch:
     inputs:
       workflowRunId:
@@ -17,16 +17,16 @@ on:
 
 env:
   artifactName: buildArtifact # This must match the artifact name in the pull--build workflow.
-  # Ternary operator to use input value if manually triggered, otherwise use the workflow_run.id of the workflow run that triggered this one.
+  # 👇 Ternary operator to use input value if manually triggered, otherwise use the workflow_run.id of the workflow run that triggered this one.
   workflowRunId: ${{ github.event_name == 'workflow_dispatch' && inputs.workflowRunId || github.event.workflow_run.id }}
 
 jobs:
   deploy-to-staging:
-    # Only run the deployment if manually triggered, or the build workflow succeeded.
+    # 👇 Only run the deployment if manually triggered, or the build workflow succeeded.
     if: ${{ github.event_name == 'workflow_dispatch' || github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     steps:
-      # Must use a 3rd party action to download artifacts from other workflows.
+      # 👇 Must use a 3rd party action to download artifacts from other workflows.
       - name: Download prerelease module artifact from triggered workflow
         uses: dawidd6/action-download-artifact@v2
         with:
