--- a/.github/workflows/4-include--build.yml
+++ b/.github/workflows/4-include--build.yml
@@ -25,6 +25,9 @@ jobs:
         uses: actions/checkout@v3
 
       # Steps to version, build, and test the code go here.
+      # We are just calling a simple PowerShell script in this example to easily pass/fail the build for testing.
+      - shell: pwsh
+        run: ./src/build-and-test.ps1
 
       - name: Upload artifact
         uses: actions/upload-artifact@v3
