--- a/.github/workflows/2-pull--build.yml
+++ b/.github/workflows/2-pull--build.yml
@@ -21,9 +21,10 @@ jobs:
         uses: actions/checkout@v3
 
       # Steps to version, build, and test the code go here.
-      # We are just calling a simple PowerShell script in this example to easily pass/fail the build for testing.
+
+      # Call a simple PowerShell script in this example to easily pass/fail the build for testing.
       - shell: pwsh
-        run: ./src/build-and-test.ps1
+        run: ./src/pass-or-fail-build.ps1
 
       - name: Upload artifact
         uses: actions/upload-artifact@v3
