--- a/.github/workflows/5-include-with-deploy-template--deploy.yml
+++ b/.github/workflows/5-include-with-deploy-template--deploy.yml
@@ -23,7 +23,7 @@ jobs:
   deploy-to-staging:
     # Only run this deploy job after the build-and-test job completes successfully.
     needs: build-and-test
-    # 👇 Call the deploy template with the proper environemnt name to deploy the artifacts.
+    # 👇 Call the deploy template with the proper environment name to deploy the artifacts.
     uses: ./.github/workflows/5-include-with-deploy-template--deploy-template.yml
     with:
       artifactName: ${{ github.env.artifactName }}
@@ -33,7 +33,7 @@ jobs:
   deploy-to-production:
     # Only run this deploy job after the deploy-to-staging job completes successfully.
     needs: deploy-to-staging
-    # 👇 Call the deploy template with the proper environemnt name to deploy the artifacts.
+    # 👇 Call the deploy template with the proper environment name to deploy the artifacts.
     uses: ./.github/workflows/5-include-with-deploy-template--deploy-template.yml
     with:
       artifactName: ${{ github.env.artifactName }}
